--- a/client.html
+++ b/client.html
@@ -8,6 +8,15 @@
     <!--  -->
 </head>
 <body>
+  <template id="main-template">
+    <div id="main-form">
+      <h3>main</h3>
+      
+      <button type= id="allContacts-button">all contacts</button>
+    </div>
+  </template>
+
+
     <template id="login-template">
         <div id="login-form">
           <h3>Login</h3>
